--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/YRathod/advent-of-code/issues"
   },
-  "homepage": "https://github.com/YRathod/advent-of-code#readme"
-}
+  "homepage": "https://github.com/YRathod/advent-of-code#readme",
+  }
